# Robotic-Arm-Study

./: README.md  check_env_args.py  dataset_verify.py  export  hdf5_format_check.py  mujoco_record.py  mujoco_record_vision_based.py  mujoco_record_vision_based_dp.py
bc_trained_models/test/20250306165929/: config.json
bc_trained_models/test/20250306165929/logs/tb/: events.out.tfevents.1741251572.stanley-ASUS-TUF-Gaming-F15-FX507ZC4-FX507ZC4
datasets/: mujoco_lift_demo.hdf5
dp_bc_trained_models/test/20250308121520/: config.json
dp_bc_trained_models/test/20250308121520/logs/: log.txt
dp_bc_trained_models/test/20250308121520/logs/tb/: events.out.tfevents.1741407323.stanley-ASUS-TUF-Gaming-F15-FX507ZC4-FX507ZC4
robomimic/algo/: __init__.py  algo.py  dp_bc.py
robomimic/config/: dp_bc_config.py
robomimic/exps/templates/: bc.json  dp.json  dp_bc.py
robomimic/models/: diffusion_nets.py
robomimic/scripts/: dp_train.py  run_trained_agent.py  run_trained_agent_dp.py  train.py
robomimic/utils/: dataset.py  file_utils.py  obs_utils.py  train_utils.py
src/hello_moveit/: CMakeLists.txt  package.xml
src/hello_moveit/src/: hello_moveit.cpp
src/mtc_tutorial/: package.xml
